# internal/airquality/routes.go
@@ -24,4 +24,5 @@ func (h *Handler) RegisterPublicRoutes(rg *gin.RouterGroup) {
 	devices := rg.Group("/public/devices/:id")
 	devices.GET("/current", h.GetPublicDeviceCurrent)
 	devices.GET("/historical", h.GetPublicDeviceHistorical)
+	rg.GET("/public/map/devices", h.GetPublicMapDevices)
 }
