# internal/platform/ent/migrate/schema.go
@@ -16,6 +16,7 @@ var (
 		{Name: "owner_id", Type: field.TypeString, Nullable: true},
 		{Name: "is_outdoor", Type: field.TypeBool, Default: false},
 		{Name: "is_public", Type: field.TypeBool, Default: false},
+		{Name: "is_location_public", Type: field.TypeBool, Default: false},
 		{Name: "device_key", Type: field.TypeString},
 		{Name: "created_at", Type: field.TypeTime},
 		{Name: "updated_at", Type: field.TypeTime},
@@ -29,12 +30,12 @@ var (
 			{
 				Name:    "device_created_at",
 				Unique:  false,
-				Columns: []*schema.Column{DevicesColumns[7]},
+				Columns: []*schema.Column{DevicesColumns[8]},
 			},
 			{
 				Name:    "device_owner_id_created_at",
 				Unique:  false,
-				Columns: []*schema.Column{DevicesColumns[3], DevicesColumns[7]},
+				Columns: []*schema.Column{DevicesColumns[3], DevicesColumns[8]},
 			},
 		},
 	}
